@@ -13,6 +13,7 @@
 * Fixed a regression where the code following a ``{% placeholder x or %}`` declaration,
   was rendered before attempting to inherit content from parent pages.
 * Changed page/placeholder cache keys to use sha1 hash instead of md5 to be FIPS compliant.
+* Fixed a bug where the change of a slug would not propagate to all descendant pages
 
 
 === 3.4.4 (unreleased) ===
